use expressRouter instead,add database gitignore

--- a/views/pages/customer.ejs
+++ b/views/pages/customer.ejs
@@ -295,7 +295,7 @@
     <script type="text/javascript">
         $(document).ready(function () {
             $.ajax({
-                url: 'fetchDetails',
+                url: 'admin/fetchDetails',
                 type: 'GET',
                 dataType: 'json',
                 success: (data) => {
