--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -40,7 +40,7 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
-                <a class="nav-link" href="/home">
+                <a class="nav-link" href="/admin">
                     <i class="fas fa-fw fa-home "></i>
                     <span>Home</span></a>
             </li>
@@ -63,23 +63,23 @@
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Custom Ordering:</h6>
-                        <a class="collapse-item" href="admin/instock">In stock</a>
-                        <a class="collapse-item" href="admin/preorder">Pre-order</a>
+                        <a class="collapse-item" href="/admin/instock">In stock</a>
+                        <a class="collapse-item" href="/admin/preorder">Pre-order</a>
                     </div>
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="admin/status">
+                <a class="nav-link" href="/admin/status">
                     <i class="fas fa-fw fa-receipt"></i>
                     <span>Order Status</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="admin/discount">
+                <a class="nav-link" href="/admin/discount">
                     <i class="fas fa-fw fa-tag"></i>
                     <span>Discount</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="admin/preordermanage">
+                <a class="nav-link" href="/admin/preordermanage">
                     <i class="fas fa-fw fa-calendar-alt"></i>
                     <span>Pre-order management</span></a>
             </li>
@@ -93,7 +93,7 @@
             </div>
             <!-- Nav Item - Charts -->
             <li class="nav-item">
-                <a class="nav-link" href="admin/customer">
+                <a class="nav-link" href="/admin/customer">
                     <i class="fas fa-fw fa-user"></i>
                     <span>Customers management</span></a>
             </li>
@@ -105,7 +105,7 @@
             </div>
             <!-- Nav Item - Tables -->
             <li class="nav-item">
-                <a class="nav-link" href="admin/employee">
+                <a class="nav-link" href="/admin/employee">
                     <i class="fas fa-fw fa-id-card"></i>
                     <span>Employees management</span></a>
             </li>
@@ -173,7 +173,7 @@
                             </div>
                         </li>
                         <div class="topbar-divider d-none d-sm-block"></div>
-                        <div class="mr-2 d-flex justify-content-end align-items-center">
+                        <div class="mr-2 d-flex justify-content align-items-center">
                             <ul>
                                 <li style="list-style-type: none;">
                                     <span class=" text-gray-600 small" id="empName"></span>
@@ -191,7 +191,7 @@
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 
-                                <img class="img-profile rounded-circle" src="/img/pm.jpg">
+                                <img class="img-profile rounded-circle" src="/img/profile.jpg">
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
@@ -392,7 +392,7 @@
     <script type="text/javascript">
         $(document).ready(function () {
             $.ajax({
-                url: 'admin/fetchDetails',
+                url: '/admin/fetchDetails',
                 type: 'GET',
                 dataType: 'json',
                 success: (data) => {
@@ -401,10 +401,8 @@
                     $('#empName').html(name)
                     $('#empRole').html(role)
                 }
-
             })
         })
-
     </script>
     <!-- Menu Toggle Script -->
     <script>
@@ -412,8 +410,6 @@
             e.preventDefault();
             $("#wrapper").toggleClass("toggled");
         });
-
-
     </script>
 
 
