--- a/views/pages/employee.ejs
+++ b/views/pages/employee.ejs
@@ -17,7 +17,11 @@
     <link href="/css/simple-sidebar.css" rel="stylesheet">
 
     <link rel="stylesheet" href="/fontawesome/css/all.css">
-
+    <style>
+        .Position{
+            text-align: center;
+        }
+    </style>
 </head>
 
 <body class="sfmono">
@@ -215,11 +219,30 @@
 
                     <!-- Page Heading -->
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                        <h1 class="h3 mb-0 text-gray-800">Product in stock</h1>
+                        <h1 class="h3 mb-0 text-gray-800 ">Employee List</h1>
+                    </div>
+                    <!-- Content Row -->
+                    <div class="col-lg-9 mt-3">
+                        <div class="row">
+                               <div class="col-lg-4 col-md-6 mb-4">
+                                   <div class="card h-100 border-buttom-primary">
+                                        <img class="card-img-top" src="/img/profile.jpg" alt="">  
+                                    <div class="card-body">
+                                        <h4 class="card-title">
+                                            Name of employee
+                                        </h4>
+                                        <div id="buttomEmployee" class="Position"></div>
+                                            <a href="/edit_customer"><button class="btn btn-primary m-1 Position">Edit</button></a></a>
+                                            <a href="#"><button class="btn btn-danger m-1 Position">Delete</button>
+                                        </div>
+                                       </div>
+                                   </div > 
+
+                                   <!--Buttom edit/delete-->
+                                   
+                        </div>
                     </div>
 
-                    <!-- Content Row -->
-                    
                 </div>  
             </div>
 
@@ -250,10 +273,28 @@
             e.preventDefault();
             $("#wrapper").toggleClass("toggled");
         });
-
-
     </script>
 
+    <!--Buttom Edit/Delete-->
+    <script type="text/javascript">
+        $(document).ready(() => {
+
+            $.ajax({
+                url :'',
+                type : 'GET',
+                dataType : 'json',
+                success : function(data){
+                    var text ='';
+                    $.each(data, function(index,obj){
+                        text +=  '<a href="/edit_customer"><button class="btn btn-primary m-1">Edit</button></a></a>'
+                        text += '<a href="#"><button class="btn btn-danger m-1">Delete</button>'
+                    })
+                    $('').html(text)
+                }
+            })
+        
+        });
+    </script>
 
 </body>
 
