--- a/views/pages/ordering/instock.ejs
+++ b/views/pages/ordering/instock.ejs
@@ -217,7 +217,7 @@
                         <h1 class="h3 mb-0 text-gray-800">In stock product</h1>
                     </div>
 
-                    <table class="table">
+                    <table class="table table-hover">
                         <thead> 
                             <tr>
                                 <th>productCode</th>
