--- a/views/pages/noPermission.ejs
+++ b/views/pages/noPermission.ejs
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Employee</title>
+    <title>Access dinied!</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
@@ -216,27 +216,11 @@
 
                     <!-- Page Heading -->
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                        <h1 class="h3 mb-0 text-gray-800">Employee management</h1>
+                        <h1 class="h3 mb-0" style="color: red;">Access Dinied! your jobTitle must include "Sale"</h1>
                     </div>
 
-                    <table class="table">
-                        <thead class="thead-light">
-                            <tr>
-                                <th>Employeenumber</th>
-                                <th>FirstName</th>
-                                <th>LastName</th>
-                                <th>officeCode</th>
-                                <th>jobTitle</th>
-                                <th>Manage</th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody id="employeeData"></tbody>
-                    </table>
-                    <div id="count">
+                    <!-- Content Row -->
 
-                    </div>
-                    
                 </div>
             </div>
 
@@ -261,14 +245,6 @@
     <script src="/fontawesome/js/all.js"></script>
     <script src="/js/navbar.js"></script>
 
-    <!-- Menu Toggle Script -->
-    <script>
-        $("#menu-toggle").click(function (e) {
-            e.preventDefault();
-            $("#wrapper").toggleClass("toggled");
-        });
-    </script>
-
     <script type="text/javascript">
         $(document).ready(function () {
             $.ajax({
@@ -281,45 +257,6 @@
                     $('#empName').html(name)
                     $('#empRole').html(role)
                 }
-
             })
         })
     </script>
-
-    <script type="text/javascript">
-        $(document).ready(function(){
-             $.ajax({
-                url : '/admin/employee/fetchEmployeeData',
-                type : 'GET',
-                dataType : 'json',
-                success : (data) => {
-                    var append = ''
-                    let count = 1
-                    $.each(data, function(index,each){
-                        var ap = 
-                        append += '<tr>'
-                        append += '<td>' + each.employeeNumber + '</td>'
-                        append += '<td>' + each.firstName + '</td>'
-                        append += '<td>' + each.lastName + '</td>'
-                        append += '<td>' + each.officeCode + '</td>'
-                        append += '<td>' + each.jobTitle + '</td>'
-                        append += '<td><a href="employee/edit"><button class="btn btn-primary class="edit" value="ss"> Edit </button></a>'
-                        append += '<button class="btn btn-danger ml-3"> Delete </button></td>'
-                        append += '</tr>'
-                        count ++
-                       
-                    })
-                    // 
-                    if(count < 1)  {
-                        $('#count').append('<p class="btn btn-danger">Found :'+ count + '</p>')
-                    }else $('#count').append('<p class="btn btn-success">Found :'+ count + '</p>')     
-                    $('#employeeData').append(append)
-
-                }
-            })
-        })
-    </script>
-
-</body>
-
-</html>
