--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -226,7 +226,7 @@
 
                     <!-- Page Heading -->
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                        <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
+                        <h1 class="h3 mb-0 text-gray-800" id="welcome">Welcome : </h1>
                     </div>
 
                     <!-- Content Row -->
@@ -400,6 +400,7 @@
                     role = data[0].jobTitle
                     $('#empName').html(name)
                     $('#empRole').html(role)
+                    $('#welcome').append(name)
                 }
             })
         })
